syntax = "proto3";
package MediaPlayerModels;


option csharp_namespace = "LocalNetflix.Protobuf.MediaPlayerModels";


message PlayingMediaInfo {
    string FileName = 1;
    double Duration = 2;
    double Eplipsed = 3;
    State State = 4;
}

message OpenFile {
    string FileName = 1;
    double FromSeconds = 2;
    bool StartInFullscreen = 3;
}

enum State {
    Unknown = 0;
    Playing = 1;
    Paused = 2;
    Stoped = 3;
}

message PlayingMediaInfoChanged {
    PlayingMediaInfo MediaInfo = 1;
    PlayingMediaInfo OldMediaInfo = 2;
    MediaProperty Property = 3;

    enum MediaProperty {
        State = 0;
        Position = 1;
        File = 2;
    }

}

message IsRunning {
    bool value = 1;
}

message Init {
    string MediaPlayerPath = 1;
}
